--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <body>
-    <h1>
-      Hello, World!
-    </h1>
-  </body>
+<head>
+<meta charset="utf-8">
+<title>未名铁道之夜 </title>
+</head>
+<body>
+    <h1>抽奖结果公告板</h1>
+    <p>以下幸运观众请联系夜奔筹备组领奖：114514</p>
+</body>
 </html>
